export type UserRole = 'ADMINISTRATOR' | 'USER' | 'PROJECT_MANAGER'; // Add any other roles